--- a/simple-events-app/package.json
+++ b/simple-events-app/package.json
@@ -12,9 +12,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "cors": "^2.8.5",
     "fastify": "^5.6.1",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.545.0",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
