--- a/simple-events-app/.env.example
+++ b/simple-events-app/.env.example
@@ -1,6 +1,6 @@
-# Database Configuration
+# Database Configuration (vendor file but added as instructed to provide in instructions)
 PGUSER=postgres
-PGPASSWORD=0905
+PGPASSWORD=0905 
 PGHOST=localhost
 PGPORT=5432
 PGDATABASE=events_db
